# cbd96-rk3399

app/camera/: camerawidgets.cpp
app/demo/image_process/: CMakeLists.txt  image_process.cc
app/demo/tools/: astyle.sh  astylerc
app/settings/wlan/: wlanlisttable.cpp  wlanlisttable.h  wlanmainwidget.cpp  wpamanager.cpp  wpamanager.h
buildroot/output/rockchip_rk3399/: .config  .rockchipconfig  Makefile
distro/: make.sh
distro/configs/: rk3399_defconfig
distro/configs/rockchip/: audio.config  audio.install  base.install  debug.install  graphics.config  graphics.install  qtapp.config  video.config  wifi.install
distro/package/: Config.in
distro/package/QLauncher/: make.sh
distro/package/busybox/: make.sh
distro/package/gallery/: make.sh
distro/package/glmark2/: Config.in
distro/package/gst-plugins-bad/: Config.in  make.sh
distro/package/gst-plugins-base/: Config.in  make.sh
distro/package/gst-plugins-good/: Config.in  make.sh
distro/package/gst-plugins-ugly/: Config.in  make.sh
distro/package/gstreamer/: make.sh
distro/package/gstreamer-rockchip/: make.sh
distro/package/libmali/: Config.in  make.sh
distro/package/music/: make.sh
distro/package/rkscript/: make.sh
distro/package/rkwifibt/: make.sh
distro/package/video/: make.sh
u-boot/: .config
u-boot/include/: autoconf.mk  autoconf.mk.dep  config.h
u-boot/include/config/: auto.conf  auto.conf.cmd  tristate.conf  uboot.release
u-boot/scripts/basic/: fixdep
u-boot/scripts/dtc/: dtc
u-boot/tools/: boot_merger  checksum  loaderimage  resource_tool  trust_merger
(+9 files in other folders)
